# diffusion2D-testing-exercise

./: diffusion2d.py  pyproject.toml
